# autoSAE

./: .gitignore  LICENSE  README.md  prepare.py  program.md  pyproject.toml  reading.md  train_sae.py
bench/: __init__.py  benchmark.tsv  compare.py  models.py  plot.py
templates/: hypotheses.template.md  journal.template.md  results.tsv.header
viz/: __init__.py  _model.py  attention.py  induction.py  logit_lens.py  render.py  resid_norms.py  tour.py
viz/templates/: tour.html.j2
