[project]
name = "automechresearch"
version = "0.1.0"
description = "Autonomous mechanistic interpretability research loop, inspired by karpathy/autoresearch. AutoSAE: agent iterates on a sparse autoencoder overnight."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "torch>=2.3",
    "numpy>=1.26",
    "transformers>=4.40",
    "datasets>=2.19",
    "tqdm>=4.66",
    "einops>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.metadata]
allow-direct-references = true
