[project]
name = "automechresearch"
version = "0.1.0"
description = "Autonomous mechanistic interpretability research loop, inspired by karpathy/autoresearch. AutoSAE: agent iterates on a sparse autoencoder overnight."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "torch>=2.3",
    "numpy>=1.26",
    "transformers>=4.40",
    "datasets>=2.19",
    "tqdm>=4.66",
    "einops>=0.7",
]

# This project is a flat-script research harness, not an installable package.
# Tell uv not to try to build a wheel — we just want the virtualenv + deps.
[tool.uv]
package = false
